update intro and data

--- a/refs.bib
+++ b/refs.bib
@@ -17,6 +17,17 @@
   publisher={Oxford University Press}
 }
 
+@article{kitanidis2020imaging,
+  title={Imaging systematics and clustering of DESI main targets},
+  author={Kitanidis, Ellie and White, Martin and Feng, Yu and Schlegel, David and Guy, Julien and Dey, Arjun and Landriau, Martin and Brooks, David and Levi, Michael and Moustakas, John and others},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={496},
+  number={2},
+  pages={2262--2291},
+  year={2020},
+  publisher={Oxford University Press}
+}
+
 @article{ross2011,
     author = {Ross, Ashley J. and Ho, Shirley and Cuesta, Antonio J. and Tojeiro, Rita and Percival, Will J. and Wake, David and Masters, Karen L. and Nichol, Robert C. and Myers, Adam D. and de Simoni, Fernando and Seo, Hee Jong and Hernández-Monteagudo, Carlos and Crittenden, Robert and Blanton, Michael and Brinkmann, J. and da Costa, Luiz A. N. and Guo, Hong and Kazin, Eyal and Maia, Marcio A. G. and Maraston, Claudia and Padmanabhan, Nikhil and Prada, Francisco and Ramos, Beatriz and Sanchez, Ariel and Schlafly, Edward F. and Schlegel, David J. and Schneider, Donald P. and Skibba, Ramin and Thomas, Daniel and Weaver, Benjamin A. and White, Martin and Zehavi, Idit},
     title = "{Ameliorating systematic uncertainties in the angular clustering of galaxies: a study using the SDSS-III}",
