--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-This paper uses the large-scale clustering of luminous red galaxies selected from the Dark Energy Spectroscopic Instrument Legacy Imaging Surveys Data Release 9 to constrain the local primordial non-Gaussianity (PNG) parameter $\fnl$. Using spherical harmonics angular power spectrum, we thoroughly investigate the impact of various photometric systematic effects, such as those caused by Galactic extinction, local stellar density, varying survey depth, and seeing. Lognormal density fields are simulated and utilized to construct covariance matrices, evaluate the robustness of our pipeline, assess whether spurious fluctuations are properly mitigated, and calibrate our cleaning methods. Using harmonic modes from $\ell=2$ to $300$, we find $36.07(25.03) < \fnl < 61.44(75.64)$ with a conservative cleaning approach and $13.09(-15.95) < \fnl < 69.14(91.84)$ with an extreme treatment of imaging systematics, both at $68\%$($95\%$) confidence. We find that calibration issues in the South Galactic Cap and local stellar density in the North Galactic Cap indicate some remaining systematic error, which induce significant biases in $\fnl$ constraints. While our constraints are consistent with zero PNG at $95\%$ confidence for the extreme approach, we show that the characterization of stellar contamination and calibration issues are crucial to derive unbiased constraints on $\fnl$ in the era of DESI and LSST cosmology.
+This paper uses the large-scale clustering of luminous red galaxies selected from the Dark Energy Spectroscopic Instrument Legacy Imaging Surveys Data Release 9 to constrain the local primordial non-Gaussianity (PNG) parameter $\fnl$. We thoroughly investigate the impact of various photometric systematic effects, such as those caused by Galactic extinction, local stellar density, varying survey depth, and seeing using spherical harmonics cross power spectrum and mean galaxy density. Lognormal density fields are simulated with and without PNG, and utilized to construct covariance matrices, evaluate the robustness of our pipeline, assess whether spurious fluctuations are properly mitigated, and calibrate our cleaning methods. Using harmonic modes from $\ell=2$ to $300$, we find $36.07(25.03) < \fnl < 61.44(75.64)$ with a conservative cleaning approach and $13.09(-15.95) < \fnl < 69.14(91.84)$ with an extreme treatment of imaging systematics, both at $68\%$($95\%$) confidence. We find that calibration issues in the South Galactic Cap and local stellar density in the North Galactic Cap indicate some remaining systematic error, which induce significant biases in $\fnl$ constraints. While our constraints are consistent with zero PNG at $95\%$ confidence for the extreme approach, we show that the characterization of stellar contamination and calibration issues are crucial to derive unbiased constraints on $\fnl$ in the era of DESI and LSST cosmology.
 \end{abstract}
