--- a/sections/data.tex
+++ b/sections/data.tex
@@ -1,9 +1,28 @@
 \section{Data}
 \label{sec:data}
-Luminous red galaxies (LRGs) are massive galaxies that occupy massive halos, lack active star formation, and are considered as one of the highly biased tracers of large scale structure. Redshift of LRGs can be easily determined from  a break around 4000 \AA~in their spectra. LRGs are widely targeted in previous galaxy redshift surveys \citep[see, e.g.,][]{eisenstein2001spectroscopic, prakash2016sdss}, and their clustering and redshift properties are well studied \citep[see, e.g.,][]{alam2021completed}. DESI is expected to collect spectra of millions of LRGs covering the redshift range of $0.4<z<1.0$ over the span of its five year mission. Targets for DESI spectroscopy are selected from imaging surveys; The ground-based surveys that probe the sky in the optical bands are the Mayall z-band Legacy Survey using the Mayall telescope at Kitt Peak \citep{dey2018overview}, the Beijing–Arizona Sky Survey using the Bok telescope at Kitt Peak \citep{zou2017project}, and the Dark Energy Camera Legacy Survey on the Blanco 4m telescope \citep[DECaLS][]{flaugher2015dark}. Additionally, the Legacy Surveys program incorporates observations conducted from the same instrument under the Dark Energy Survey \citep{abbott2016dark}, which constitutes for about $1130 \deg^{2}$ of their southern sky footprint. The BASS+MzLS footprint can be distinguished from the DECaLS by applying DEC $> 32.375$ degrees, although there is an overlap between the two region for calibration. 
+Luminous red galaxies (LRGs) are massive galaxies that occupy massive halos, lack active star formation, and are one of the highly biased tracers of large scale structure. Redshifts of LRGs are easily determined from a break around 4000 \AA~in their spectra. LRGs are widely targeted in previous galaxy redshift surveys \citep[see, e.g.,][]{eisenstein2001spectroscopic, prakash2016sdss}, and their clustering and redshift properties are well studied \citep[see, e.g.,][]{alam2021completed}. DESI is designed to collect spectra of millions of LRGs covering the redshift range of $0.4<z<1.0$ over the span of its five-year mission. Targets for DESI spectroscopy are pre-selected from three ground-based imaging surveys that probed the night sky in the optical bands between 2014 and 2019: the Mayall z-band Legacy Survey using the Mayall telescope at Kitt Peak \citep{dey2018overview}, the Beijing–Arizona Sky Survey using the Bok telescope at Kitt Peak \citep{zou2017project}, and the Dark Energy Camera Legacy Survey on the Blanco 4m telescope \citep[DECaLS][]{flaugher2015dark}. Additionally, the DECaLS program integrates observations conducted from the same instrument under the Dark Energy Survey \citep{abbott2016dark}, which constitute about $1130 \deg^{2}$ of their southern sky footprint. The BASS+MzLS footprint is distinguished from the DECaLS NGC by applying DEC $> 32.375$ degrees, although there is an overlap between the two region for calibration \citep{dey2018overview}. 
 
 \subsection{DESI Imaging DR9 LRGs}
-We use photometric LRGs selected from the DESI Imaging Surveys Data Release 9 \citep[DR9;][]{dey2018overview} using the selection designed for the DESI 1\% survey \mr{(CITE)}, described as SV3 in \cite{zhou2022target}. The color-magnitude cuts are described in the $g$, $r$, $z$ bands in the optical and $W1$ band in the infrared, and summarized here in Tab. \ref{tab:ts}. The implementation of these selections in the DESI pipeline is described in \cite{myers2022}. DESI-like LRGs are selected brighter than the survey depth limits, and thus the sample density field is nearly homogenous. To further reduce stellar contamination, the sample is masked for bright stars, foreground bright galaxies as well as clusters of galaxies \footnote{See the maskbits at \url{https://www.legacysurvey.org/dr9/bitmasks/}}. Then, it is binned into \textsc{healpix} \citep{gorski2005healpix} at $\textsc{nside}=256$ to construct the density map with an average density of $800$ deg$^{-2}$ with a coverage around \mr{$14,000$} square degrees of the sky. The density map is corrected for pixel incompleteness in the density field of LRGS using a catalog of random points, hereafter referred to as randoms, uniformly scattered over the footprint with the same cuts and masks applied to the DR9 LRGs. 
+We work with the photometric LRGs selected from the DESI Imaging Surveys Data Release 9 \citep[DR9;][]{dey2018overview} using the selection and cuts designed for the DESI 1\% survey \mr{(CITE)}, described as SV3 selection in more detail in \cite{zhou2022target}. The color-magnitude selection cuts are defined in the $g$, $r$, $z$ bands in the optical and $W1$ band in the infrared frequencies, and summarized in Tab. \ref{tab:ts}. The implementation of these selection cuts in the DESI data processing pipeline is described in \cite{myers2022}. Fig. \ref{fig:nz} shows the redshift distribution of our LRG sample (solid black) which is inferred from the spectroscopic DESI Survey Validation data \mr{(CITE)}, and the evolution of halo bias for our LRG sample (dashed red) adapted from \cite{zhou2021clustering}. The bias model is consistent with the assumption of a constant clustering amplitude. 
+
+DESI-like LRGs are selected brighter than the survey depth limits; therefore, the LRG density field is nearly homogenous unlike other DESI tracers. To further reduce stellar contamination, the LRG sample is masked rigorously for foreground bright stars, galaxies, and clusters of galaxies \footnote{See the maskbits at \url{https://www.legacysurvey.org/dr9/bitmasks/}}. Then, the sample is binned into \textsc{healpix} \citep{gorski2005healpix} at $\textsc{nside}=256$ to construct the density map with an average surface density of $800$ deg$^{-2}$ with sky coverage around \mr{$14,000$} square degrees. The density map is corrected for pixel incompleteness and masked areas in the density field of LRGs using a catalog of random points, hereafter referred to as randoms, uniformly scattered over the footprint with the same cuts and masks applied to the DR9 LRGs. Fig. \ref{fig:ng} (top) shows observed density field of the DR9 LRGs in deg$^{-2}$ before accounting for any imaging systematic effects, which demonstrates large-scale spurious fluctuations. Specifically, the SGC footprint indicates some systematic under-density while there are some systematic overdensity near the boundaries in the NGC. There are some disconnected islands, hereafter referred to as \textit{spurious islands}, in the DECaLS North region at Declination below $-11$, which are removed from the main analysis to minimize potential calibration issues. Additionally, some parts of the DECaLS South footprint with Declination below $-30$ are removed from the sample, since similar calibration issues might tamper with our analysis. We present how these data cuts influence our $\fnl$ constraints in Section \ref{sec:results}.
+
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.45\textwidth]{figures/nz_lrg.pdf}
+    \caption{Redshift distribution (solid) and bias evolution (dashed) of DESI LRGs \citep{zhou2021clustering, zhou2022target}. The LRG redshift distribution is deducted from early spectroscopy by DESI and the LRG bias model assumes a constant clustering amplitude.}
+    \label{fig:nz}
+\end{figure}
+
+\begin{figure*}
+    \centering
+    \includegraphics[width=\textwidth]{figures/dr9data.pdf}
+    \caption{DESI Imaging Legacy Survey Data Release 9 Luminous Red Galaxies and imaging properties \citep{dey2018overview}. Top: Observed target density field in deg$^{-2}$. Spurious disconnected islands from the DECaLS North footprint at Declination below $-11$ and parts of the DECaLS South with Declination below $-30$ are dropped from the DR9 sample due to potential calibration issues. Bottom: Mollweide projections of DR9 catalog imaging properties (depth and psfsize/seeing) and MW foregrounds (extinction and local stellar density) in celestial coordinates.}
+    \label{fig:ng}
+\end{figure*}
+
+
 \begin{table*}
     \caption{Selection criteria for the DESI-like LRG targets \citep{zhou2022target}. Magnitudes are corrected for MW extinction.}
     \label{tab:ts}
@@ -28,24 +47,11 @@ We use photometric LRGs selected from the DESI Imaging Surveys Data Release 9 \c
       }
 \end{table*}
 
-\begin{figure*}
-    \centering
-    \includegraphics[width=\textwidth]{figures/dr9data.pdf}
-    \caption{DESI Imaging Legacy Survey Data Release 9 Luminous Red Galaxies and imaging properties \citep{dey2018overview}. Top: Observed target density field in deg$^{-2}$. Spurious disconnected islands from the DECaLS North footprint at Declination below $-11$ and parts of the DECaLS South with Declination below $-30$ are dropped from the DR9 sample due to potential calibration issues. Bottom: Mollweide projections of DR9 catalog imaging properties (depth and psfsize) and MW foregrounds (extinction and local stellar density) in celestial coordinates.}
-    \label{fig:ng}
-\end{figure*}
-
-\begin{figure}
-    \centering
-    \includegraphics[width=0.45\textwidth]{figures/nz_lrg.pdf}
-    \caption{Redshift distribution and bias evolution of DESI LRGs \citep{zhou2021clustering, zhou2022target}. The redshift distribution is deducted from early spectroscopy by DESI and the LRG bias model assumes a constant clustering amplitude.}
-    \label{fig:nz}
-\end{figure}
+We study the impact of imaging properties as potential sources of systematic error, mapped into \textsc{healpix} at the same \textsc{nside}. Similar to \cite{zhou2022target}, the properties studied in this work are local stellar density constructed from point-like sources with a g-band magnitude in the range $12 \leq g < 17$ from Gaia Data Release 2 \citep[see,][]{gaiadr2, myers2022};  Galactic extinction E[B-V] from \cite{schlegel1998maps}; and other imaging properties include survey depth (galaxy depth in the g, r, and z bands and PSF depth in W1) and seeing in the g, r, and z bands. These maps are produced by making the histograms of randoms (painted with imaging properties) in \textsc{HEALPix} and averaging over randoms in each pixel. Fig. \ref{fig:ng} (bottom) illustrates the imaging templates investigated for potential sources of systematic error, each of which reflect their characteristic large-scale spurious fluctuations. For instance, the underdensity with the SGC can be visually correlated with the depth maps, while the overdensity in the NGC can be associated visually with the extinction map.
 
 
-Fig. \ref{fig:ng} (top) shows observed density field of DR9 LRGs in deg$^{-2}$ before accounting for any potential systematic effects. There are some disconnected islands, hereafter referred to as \textit{spurious islands}, in the DECaLS North region at Declination below $-11$, which are removed from the sample to minimize potential calibration issues. Additionally, parts of the DECaLS South with Declination below $-30$ are cut from the sample, since similar calibration issues might tamper with our analysis. We present  how these data cuts influence our $\fnl$ constraints in Section \ref{sec:results}. Fig. \ref{fig:ng} (bottom) illustrates the redshift distribution of our sample which is inferred from the DESI Survey Validation data \mr{(CITE)}, and the evolution of  galaxy bias for our LRG sample adapted from \cite{zhou2021clustering}, consistent with the assumption of a constant clustering amplitude.
 
-We study the impact of potential sources of systematic error, mapped into \textsc{healpix} at the same \textsc{nside}. Similar to \cite{zhou2022target}, the properties studied in this work are local stellar density constructed from point-like sources with a g-band magnitude in the range $12 \leq g < 17$ from Gaia Data Release 2 \citep[see,][]{gaiadr2, myers2022};  Galactic extinction E[B-V] from \cite{schlegel1998maps}; and other imaging properties include survey depth (galaxy depth in the g, r, and z bands and PSF depth in W1) and seeing in the g, r, and z bands. These maps are produced by making the histograms of randoms (painted with imaging properties) in \textsc{HEALPix} and averaging over randoms in each pixel. Fig. \ref{fig:pcc} shows the Pearson correlation between galaxy density and imaging properties for the imaging surveys in the top panel and the correlation among imaging properties themselves for the full DESI survey in the bottom panel. There is a strong correlation between galaxy density and depth maps and then the second important property seems to be Galactic foregrounds. There is a little correlation between galaxy density and the W1 depth and psfsize properties. We find that there is a large correlation among the imaging properties themselves, especially between the local stellar density and Milky Way extinction; also, the r-band and g-band properties are more correlated with each other than with the z-band. We follow a template based method to derive a set of weights to account for spurious fluctuations by regressing out galaxy counts against a set of imaging maps or templates.  Because of the inner-correlation amongst the maps, a few subsets of maps are considered as well. These subsets are selected to minimize the correlations among the predictors while having maximum correlation with observed density map.
+Fig. \ref{fig:pcc} shows the Pearson correlation coefficient between the DR9 LRG density and DESI imaging properties for the three imaging surveys (DECaLS North, DECaLS South, and BASS+MzLS) in the top panel and the correlation matrix among the imaging properties themselves for the full DESI survey in the bottom panel. There is a strong correlation between the LRG density and depth maps, and then the second correlated property seems to be Galactic foregrounds. There is a little correlation between the LRG density and the W1 depth and psfsize properties. We find that there is a large correlation among the imaging properties themselves, especially between the local stellar density and Milky Way extinction; also, the r-band and g-band properties are more correlated with each other than with the z-band. We follow a template-based approach to derive a set of weights to apply to the LRG density in order to account for spurious fluctuations. We regress out the DR9 density map against a set of imaging maps, referred to as imaging templates.  Because of the inner-correlation amongst the maps, a few subsets of maps are considered as well. These subsets are selected to minimize the correlations among the predictors while having maximum correlation with observed density map.
 \begin{itemize}
 \item Conservative I: Extinction, depth$_{z}$
 \item Conservative II: Extinction, depth$_{z}$, psfsize$_{r}$
