--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,21 +1,21 @@
 \section{Introduction}
 \label{sec:introduction}
-Current observations of the cosmic microwave background (CMB), large-scale structure (LSS), and supernovae (SN) Hubble diagrams are explained to a great degree by a cosmological model that consists of dark energy, dark matter, and ordinary luminous matter, which has gone through a phase of rapid expansion, known as \textit{inflation}, at its early stages \citep[see, e.g.,][]{weinberg2013observational}. The theory of inflation elegantly addresses fundamental issues, such as the isotropy and homogeneity of the CMB temperature and LSS density, absence of magnetic monopole, and flatness of the Universe \citep[see, e.g.,][]{weinberg2008cosmology}. At the end of inflation, the Universe was reheated, and primordial fluctuations were generated to seed the subsequent growth of structure \citep{kofman1994reheating, bassett2006inflation, lyth2009primordial}. Even though the manifestation of an inflationary era is almost certain from observations, the details of the inflation field or its underlying mechanism are vastly unknown, and statistical properties of primordial fluctuations remain an interesting question in modern observational cosmology. Early analyses of cosmological datasets have suggested that initial conditions of the Universe are consistent with Gaussian fluctuations \citep{guth2005inflationary}; however, some classes of inflationary models predict some levels of non-Gaussianities in the primordial gravitational field. In its simplest form, primordial non-Gaussianity (PNG) depends on the local value of the gravitational potential $\phi$ and is parameterized by a nonlinear coupling constant $\fnl$ \citep{komatsu2001acoustic},
+Current observations of the cosmic microwave background (CMB), large-scale structure (LSS), and supernovae (SN) Hubble diagrams are explained to a great degree by a cosmological model that consists of dark energy, dark matter, and ordinary luminous matter, which has gone through a phase of rapid expansion, known as \textit{inflation}, at its early stages \citep[see, e.g.,][]{weinberg2013observational}. The paradigm of inflation elegantly addresses fundamental issues, such as the isotropy, flatness, and homogeneity of the Universe as well as the absence of magnetic monopole \citep[see, e.g.,][]{weinberg2008cosmology}. At the end of inflation, the Universe went through a reheating process, and primordial fluctuations generated to seed the subsequent growth of structure \citep{kofman1994reheating, bassett2006inflation, lyth2009primordial}. Even though the reality of an inflationary era is almost certain from observations, the details of the inflation field and its underlying mechanism are vastly unknown, and statistical properties of primordial fluctuations remain an interesting question in modern observational cosmology. Early analyses of cosmological datasets have suggested that initial conditions of the Universe are consistent with Gaussian fluctuations \citep{guth2005inflationary}; however, some classes of inflationary models predict some levels of non-Gaussianities in the primordial gravitational field. In its simplest form, primordial non-Gaussianity (PNG) depends on the local value of the gravitational potential $\phi$, and it is parameterized by a nonlinear coupling constant $\fnl$ \citep{komatsu2001acoustic},
 \begin{equation}
  \Phi = \phi + \fnl [\phi^{2} - <\phi^{2}>].
 \end{equation}
-Standard slow-roll inflation theory predicts $\fnl$ to be of order $10^{-2}$, while multi-field theories predict considerably higher values than unity \citep[see, e.g.,][]{de2017next}. Therefore, robust constraints on $\fnl$ are considered the first stepping stone toward better understanding the physics of the early Universe. PNG alters the local number density of galaxies by coupling the long and small wavelength modes of dark matter gravitational field, and as a result, it induces a scale-dependent shift in halo bias \citep[see, e.g.,][]{dalal2008imprints, slosar2008constraints},
+Standard slow-roll inflation predicts $\fnl$ to be of order $10^{-2}$, while multi-field inflationary theories anticipate considerably higher values than unity \citep[see, e.g.,][]{de2017next}. Therefore, deriving robust constraints on $\fnl$ are considered the first stepping stone toward better understanding the physics of the early Universe. PNG alters the local number density of galaxies by coupling the long and small wavelength modes of dark matter gravitational field, and as a result, it induces a scale-dependent shift in halo bias \citep[see, e.g.,][]{dalal2008imprints, slosar2008constraints},
 \begin{equation}\label{eq:db}
 \Delta b \sim \fnl \frac{(b - p)}{k^{2}},
 \end{equation}
-where $p$ determines the response of the tracer to the halo gravitational field. Assuming the universality of the halo occupation function, i.e., only mass determines how a halo is occupied by galaxies, $p=1$. However, numerical simulations have shown the halo occupation distribution of tracers that are a result of recent mergers could depend on more properties besides mass, and thus $p=1.6$ \citep{slosar2008constraints}. Because of the dependence of $\Delta b$ on $k^{-2}$, local primordial non-Gaussianity leaves its signature on small wavenumbers (or large scales) in the two-point clustering of galaxies and quasars. 
+where $p$ determines the response of the tracer to the halo gravitational field. If only mass determines how galaxies occupy a halo, $p=1$, which is often referred to as the universality of halo occupation function. However, numerical simulations have shown halo occupation distribution of tracers that resulted from recent mergers could depend on more properties besides mass, and thus $p=1.6$ \citep{slosar2008constraints}. Because of the dependence of $\Delta b$ on $k^{-2}$, local primordial non-Gaussianity leaves its signature on small wavenumbers (or large scales) in the two-point clustering of galaxies and quasars. 
 
-The current tightest bound on $\fnl$ comes from the three-point clustering analysis of the CMB temperature anisotropies by the Planck satellite, $\fnl=0.9\pm 5.0$ \citep{akrami2019planck}. Upcoming generations of CMB experiments will improve this constraint; but since CMB is limited by cosmic variance, it alone cannot further enhance $\fnl$ constraints, enough to break the degeneracy amongst inflationary models \citep[see, e.g.,][]{ade2019simons}. However, combining CMB with LSS data could cancel cosmic variance, partially even if not completely, and enhance these limits to a precision level required to differentiate between various inflationary models \citep[see, e.g.,][]{schmittfull2018PhRvD}. Constraining $\fnl$ with the three-point clustering of LSS is also hindered by the late-time nonlinear effects raised due to structure growth \citep{baldauf2011galaxy, baldauf2011primordial}, and this limitation establishes the scale-dependent bias effect as the smoking gun for constraining local PNG with LSS. Another method for constraining $\fnl$ employs UV Luminosity Function to probe galaxy abundances and structure formation on small scales (e.g., $k \sim 2~{\rm Mpc}^{-1}$), which are otherwise impossible to explore with CMB and LSS; \cite{sabti2021JCAP} uses the Hubble Space Telescope catalogs \citep{bouwens2015ApJ} to find a $2\sigma$ bound of $-166<\fnl<497$, and predicts upcoming surveys such as the James Webb Space Telescope and the Nancy Grace Roman Space Telescope to yield up to four times improvements.
+The current tightest bound on $\fnl$ comes from the three-point clustering analysis of the CMB temperature anisotropies by the Planck satellite, $\fnl=0.9\pm 5.0$ \citep{akrami2019planck}. Upcoming generations of CMB experiments will improve this constraint, but since cosmic variance limits CMB, CMB data alone cannot further enhance our understanding of $\fnl$ enough to break the degeneracy amongst inflationary models \citep[see, e.g.,][]{ade2019simons}. However, combining CMB with LSS data could cancel cosmic variance, partially even if not completely, and enhance these limits to a precision level required to differentiate between various inflationary models \citep[see, e.g.,][]{schmittfull2018PhRvD}. Constraining $\fnl$ with the three-point clustering of LSS is also hindered by the late-time nonlinear effects raised due to structure growth \citep{baldauf2011galaxy, baldauf2011primordial}, and this limitation establishes the scale-dependent bias effect as the smoking gun for constraining local PNG with LSS. UV Luminosity Function probes galaxy abundances and structure formation on small scales (e.g., $k \sim 2~{\rm Mpc}^{-1}$), which are otherwise impossible to explore with CMB and LSS, and provides a new approach for constraining $\fnl$. With this technique, \cite{sabti2021JCAP} uses the Hubble Space Telescope catalogs \citep{bouwens2015ApJ} to find a $2\sigma$ bound of $-166<\fnl<497$, and predicts upcoming surveys such as the James Webb Space Telescope and the Nancy Grace Roman Space Telescope to yield up to four times improvements.
 
-Measuring $\fnl$ with the scale-dependent bias is nonetheless very demanding due to the presence of various systematic effects which spur excess clustering signal on large scales sensitive to $\fnl$. These systematics can be broadly classified into theoretical and observational. Major theoretical systematic effects are caused by the survey geometry, which couples different angular modes \citep{beutler2014clustering,wilson2017rapid}. Relativistic effects also generate identical scale-dependent signatures on large scales, which could hinder constraining $\fnl$ with the scale-dependent bias effect \citep{wang2020}. Similarly, matter density fluctuations with wavelengths larger than the survey volume, as known as super-sample modes,  modulate the power spectrum of galaxies \citep{castorina2020JCAP}. The other effect is commonly referred to as integral constraint and is raised because the mean galaxy density for constructing the density contrast field is directly estimated from data rather than being known a priori, which pushes the clustering signal on modes near the survey size to zero \citep{peacock1991large,de2019integral}. Ignoring any of these effects leads to biased $\fnl$ constraints \citep[see, e.g.,]{riquelme2022primordial}. On the other hand, observational systematics are predominantly driven by either varying imaging properties across the sky \citep{ross2011} or calibration issues that cause spurious fluctuations in the target density field \citep{huterer2013calibration}. This type of systematic error is much more challenging to control and has hindered previous studies of local PNG with galaxy and quasar clustering \citep[see, e.g.,][]{Ho2015JCAP...05..040H}. For instance, \cite{pullen2013systematic} found that the level of systematic contamination in the quasar sample of SDSS DR6 does not allow a robust $\fnl$ measurement. These imaging systematic issues are expected to be severe for wide-area galaxy surveys that observe the night sky closer to the Galactic plane and attempt to loosen the selection criteria to incorporate fainter targets. Besides canceling cosmic variance, cross-correlating different tracers is a technique to alleviate systematic error, as each tracer might respond differently to a source of systematics. \cite{giannantonio2014improved} presents $\fnl$ constraints using the integrated Sachs-Wolfe effect.
+Measuring $\fnl$ with the scale-dependent bias effect is nonetheless exceptionally challenging due to various systematic effects which spur excess clustering signal on large scales sensitive to $\fnl$. These systematics are broadly classified into theoretical and observational. Survey geometry is a major source of systematic error, which couples clustering power at different angular modes \citep{beutler2014clustering,wilson2017rapid}. Relativistic effects also generate identical scale-dependent signatures on large scales, which hinder measuring $\fnl$ with the scale-dependent bias effect \citep{wang2020}. Similarly, matter density fluctuations with wavelengths larger than survey volume, known as super-sample modes, modulate power spectrum of galaxies \citep{castorina2020JCAP}. Integral constraint is raised because the mean galaxy density for constructing the density contrast field is estimated from data directly rather than being known a priori. Intergal constraint pushes clustering power on modes near survey size to zero \citep{peacock1991large,de2019integral}. Neglecting any of these effects in modeling power spectrum leads to biased $\fnl$ constraints \citep[see, e.g.,]{riquelme2022primordial}. On the other hand, observational systematics are driven predominantly by either varying imaging properties across the sky \citep{ross2011} or calibration issues that cause spurious fluctuations in the target density field \citep{huterer2013calibration}. This type of systematic error is much more challenging to model and mitigate, and it has hampered previous studies of local PNG with the scale-dependent bias effect and clustering of galaxies and quasars \citep[see, e.g.,][]{Ho2015JCAP...05..040H}. For instance, \cite{pullen2013systematic} found that the level of systematic contamination in the quasar sample of Sloan Digital Sky Survey DR6 does not allow a robust $\fnl$ measurement. These imaging systematic issues are expected to be severe for wide-area galaxy surveys that observe the night sky closer to the Galactic plane and attempt to loosen the selection criteria to incorporate fainter targets \citep[see, e.g,][]{kitanidis2020imaging}. Besides canceling cosmic variance, cross-correlating different tracers is another technique to alleviate the impact of imaging systematics, as each tracer might respond differently to a source of systematics. \cite{giannantonio2014improved} presents improved $\fnl$ constraints using the integrated Sachs-Wolfe effect.
 
-The Dark Energy Spectroscopic Instrument (DESI) utilizes robots to collect $5000$ spectra in parallel, and it is destined to deliver an unparalleled amount of spectroscopic data, which will enable analyses to deepen our understanding of the energy contents of the Universe. With the volume probed, assuming imaging systematics are under control, DESI along with other upcoming surveys such as Rubin Observatory and SphereX are forecast to yield unprecedented constraints on $\fnl$ as well \citep[see, e.g.,][]{Heinrich2022AAS...24020203H}. DESI preselects its targets from its dedicated imaging surveys, as known as DESI Legacy Imaging Surveys, which are collected between 2014 and 2019 from three ground-based telescopes in Chile and the US.
+The Dark Energy Spectroscopic Instrument (DESI) uses robots to collect $5000$ spectra in parallel, and is designed to deliver unparalleled volume of spectroscopic data that will enable analyses to deepen our understanding of the energy contents of the Universe, specifically, the equation of state for Dark Energy. Assuming imaging systematics are under control and with the volume probed, DESI along with other upcoming surveys, such as Rubin Observatory and SphereX, are expected to yield unprecedented constraints on $\fnl$ \citep[see, e.g.,][]{Heinrich2022AAS...24020203H}. DESI preselects its targets from its dedicated imaging surveys, known as the DESI Legacy Imaging Surveys, which are collected from observation conduced between 2014 and 2019 from three ground-based telescopes based in Chile and the US.
 
-The characterization of potential sources for systematic error in DESI imaging data is of paramount importance to DESI success, since these effects from imaging catalogs could potentially be inherited into spectroscopic catalogs, and thus influence the science goals with DESI data. DESI targets galaxies and quasars to probe LSS up to redshifts around 4, and effects of observational systematics in DESI targets have been studied in great detail \cite[see, e.g.,][]{zhou2021clustering, chaussidon2022angular}. Improving techniques to characterize systematic error in these samples is also important for science beyond dark energy, such as constraining $\fnl$. Some of the current techniques aim to subtract effects of imaging systematics by either cross-correlating target density and imaging maps (mode deprojection) or solving a least-square optimization to estimate the contribution from each imaging property to target density field (template-based regression), ultimately to regress out the modes affected by imaging properties from the target density. These methods have their limitations as well. For instance, mode deprojection yields an unbiased clustering but can only be used for 2D data and its involved matrix algebra could be time-consuming for a large survey, while template-based regression is computationally inexpensive but removes some of the true clustering signal. Specifically related to the template-based regression method, there is little effort to calibrate and characterize the amount of true clustering signal that is removed during the cleaning process. For studies like BAO and RSD, these effects are shown to be negligible \citep{merz2021clustering}, however, as these effects are especially prominent on large scales \citep{rezaie2021primordial}, they introduce biases in $\fnl$ constraints \citep{mueller2022primordial}.  
+The characterization of potential sources for systematic error in DESI imaging data is of paramount importance to DESI success, since these effects from imaging catalogs could potentially be inherited into spectroscopic catalogs and thus negatively influence the science goals with DESI data. DESI targets galaxies and quasars to construct a 3D map of LSS up to redshifts around 4. The effects of observational systematics in DESI targets have been studied in great detail \cite[see, e.g.,][]{kitanidis2020imaging, zhou2021clustering, chaussidon2022angular}. Improving techniques to characterize systematic error in these samples is crucial for the science beyond dark energy, such as constraining $\fnl$. Some of the current methods seek to mitigate systematic effects by either cross-correlating target density and imaging maps (mode deprojection) or solving a least-square optimization to estimate the contribution from each imaging property to target density field (template-based regression), ultimately to regress out the modes affected by imaging properties from the target density. These methods have their limitations and strengths. For instance, mode deprojection yields an unbiased clustering but can be employed for angular clustering only, and its involved matrix algebra could turn out time-consuming for large survey sizes. Template-based regression is computationally inexpensive, but it returns biased clustering by removing some of clustering signal, depending on the number of templates and the flexibility of regression model. Specifically related to the template-based regression method, there is little effort to calibrate and characterize the amount of clustering power, which is removed during the cleaning process. For studies like BAO and RSD, these effects are demonstrated to be negligible \citep{merz2021clustering}; however, these effects introduce biases in $\fnl$ constraints \citep{mueller2022primordial} as they are prominent on large scales \citep{rezaie2021primordial}.  
  
-This paper presents an exquisite study of imaging systematic error and characterization of mitigation biases for constraining $\fnl$ with the sample of luminous red galaxies (LRG) from the DESI Legacy Imaging Surveys Data Release 9 (DR9). We also present enhanced statistical tools to address the data quality and significance of residual systematic error. In this paper, we test the robustness of our results against various sources of systematic effects such as calibration and MW extinction. We also make use of early spectroscopic data from DESI Survey Validation to determine the redshift distribution of galaxies. We cross-correlate the DR9 LRG density field with the templates of imaging properties to evaluate the effectiveness of different treatment methods and to characterize the significance of residual systematic error. To assess the sensitivity of $\fnl$ signal to cleaning methods, we apply various linear and nonlinear approaches with different combinations of templates for imaging properties. This paper is structured as follows. Section \ref{sec:data} describes the DR9 LRG sample and simulations with and without PNG and imaging systematic effects, and Section \ref{sec:method} outlines the theory framework for modeling angular power spectrum and analysis techniques to account for various observational and theoretical systematic error. Finally, we present $\fnl$ constraints in Section \ref{sec:results}, and conclude with a comparison to previous $\fnl$ studies in Section \ref{sec:conclusion}.
+This paper presents an exquisite study of imaging systematic error and characterization of mitigation biases for constraining $\fnl$ with the DESI imaging data. We address the sample quality and measure the significance of residual systematic error with angular cross power spectrum (between galaxy density and imaging properties) and galaxy mean density contrast statistics. In this paper, the robustness of our results is validated against various sources of systematic error, such as calibration and Milky Way extinction. We utilize early spectroscopic data from the DESI Survey Validation to determine the redshift distribution of tracers used for our analysis. We cross-correlate the galaxy density field with the templates of imaging properties to evaluate the effectiveness of different treatment methods and to characterize the significance of residual systematic error. To assess the sensitivity of $\fnl$ signal to cleaning methods, we apply various linear and nonlinear approaches with different combinations of template maps for imaging properties. This paper is structured as follows. Section \ref{sec:data} describes the DESI imaging galaxy sample and simulations with and without PNG and imaging systematic effects, and Section \ref{sec:method} outlines the theory framework for modeling angular power spectrum and analysis techniques to account for various observational and theoretical systematic error. Finally, we present $\fnl$ constraints in Section \ref{sec:results}, and conclude with a comparison to previous $\fnl$ studies in Section \ref{sec:conclusion}.
