--- a/sections/data.tex
+++ b/sections/data.tex
@@ -59,7 +59,7 @@ Fig. \ref{fig:pcc} shows the Pearson correlation coefficient between the DR9 LRG
 \end{itemize}
 We also investigate whether including external maps for neutral hydrogen column density \mr{(CITE)} and calibration (e.g., in the z band; \textit{CALIBZ}) could shed light on remaining systematic effects. 
 
-Linear and nonlinear models (approximated using a neural network) are applied to assess the potential of nonlinear systematic error. Parameters of the models are fit by optimizing the negative Poisson log likelihood, $= \sum \lambda - \rho \log(\lambda)$, where the summation runs over pixels, $\rho$ is the galaxy density, and $\lambda$ is either a linear or nonliner model for galaxy density given imaging properties \textbf{x} as input, $\lambda(\textbf{x}) = \log (1+e^{f(\textbf{x})})$. For finding the parameters of the linear model, we perform a Monte Carlo Markov Chain (MCMC) search using the \textsc{emcee} package \mr{(CITE)} and for the nonlinear model we use the implementation from \cite{rezaie2021primordial}; specifically, the nonlinear model is an ensemble of 20 neural network models. Each neural network is constructed with three hidden layers and 20 rectifier units on each layer. Rectifier is identity function for positive input and zero for negative, and it introduces nonlinearities in the neural network. For the linear model we use all data for computing the log of posterior during MCMC while for the nonlinear approach we use $60\%$ of data for training, $20\%$ for validation, and $20\%$ for testing; this is to minimize the chance of over-fitting by the nonlinear model. By changing the permutation of training-testing splits, we test the nonlinear model on entire data. The training is performed for up to 70 training epochs using \textsc{Adam} optimizer, which is a variant of gradient descent, and the learning rate is tuned on the validation set to dynamically varying between $0.001$ and $0.1$, to enable learning robust against local minima. The best model is then selected with the lowest prediction error when applied to the validation set. Finally, we apply the ensemble of 20 best fit models to the test set and average over the predictions to construct the predicted galaxy density maps, which is inverted and used as imaging systematic weights. 
+Linear and nonlinear models (approximated using a neural network) are applied to assess the potential of nonlinear systematic error. Parameters of the models are fit by optimizing the negative Poisson log likelihood, $= \sum \lambda - \rho \log(\lambda)$, where the summation runs over pixels, $\rho$ is the galaxy density, and $\lambda$ is either a linear or nonliner model for galaxy density given imaging properties \textbf{x} as input, $\lambda(\textbf{x}) = \log (1+e^{f(\textbf{x})})$. For finding the parameters of the linear model, we perform a Monte Carlo Markov Chain (MCMC) search using the \textsc{emcee} package \mr{(CITE)} and for the nonlinear model we use the implementation from \cite{rezaie2021primordial}; specifically, the nonlinear model is an ensemble of 20 neural network models. Each neural network is constructed with three hidden layers and 20 rectifier units on each layer. Rectifier is identity function for positive input and zero for negative, and it introduces nonlinearities in the neural network. For the linear model we use all data for computing the log of posterior during MCMC while for the nonlinear approach we use $60\%$ of data for training, $20\%$ for validation, and $20\%$ for testing; this is to minimize the chance of over-fitting by the nonlinear model. By changing the permutation of training-testing splits, we test the nonlinear model on entire data. The training is performed for up to 70 training epochs using \textsc{Adam} optimizer, which is a variant of gradient descent, and the learning rate is tuned on the validation set to dynamically varying between $0.001$ and $0.1$, to enable learning robust against local minima. The best model is then selected with the lowest prediction error when applied to the validation set. Finally, we apply the ensemble of 20 best fit models to the test set and average over the predictions to construct the predicted galaxy density maps, which is used as imaging systematic weights to down-weight observed density map for removing imaging systematics. 
 
 Upon the inspection of the predicted density maps, we find that while most of the large-scale spurious fluctuations are explained by just the extinction map and depth in the z band, adding the psfsize in the r band results in finer structure in the predicted density map. Using all maps as input features for regression does not add much information. Comparing linear to nonlinear with the same input maps, we find that the nonlinear approach yields finer structure due to a higher flexibility.  Overall, both models predict higher density near the boundaries where the surveys meet the high extinction regions of Milky Way. These regions are probably contaminated artifacts entering the selection either via the direct stellar contamination or the impact of extinction on colors.
 
