--- a/refs.bib
+++ b/refs.bib
@@ -17,6 +17,38 @@
   publisher={Oxford University Press}
 }
 
+
+@article{beutler2019primordial,
+  title={Primordial features from linear to nonlinear scales},
+  author={Beutler, Florian and Biagetti, Matteo and Green, Daniel and Slosar, An{\v{z}}e and Wallisch, Benjamin},
+  journal={Physical Review Research},
+  volume={1},
+  number={3},
+  pages={033209},
+  year={2019},
+  publisher={APS}
+}
+
+
+@ARTICLE{alvarez2014arXiv1412.4671A,
+       author = {{Alvarez}, Marcelo and {Baldauf}, Tobias and {Bond}, J. Richard and {Dalal}, Neal and {de Putter}, Roland and {Dor{\'e}}, Olivier and {Green}, Daniel and {Hirata}, Chris and {Huang}, Zhiqi and {Huterer}, Dragan and {Jeong}, Donghui and {Johnson}, Matthew C. and {Krause}, Elisabeth and {Loverde}, Marilena and {Meyers}, Joel and {Meerburg}, P. Daniel and {Senatore}, Leonardo and {Shandera}, Sarah and {Silverstein}, Eva and {Slosar}, An{\v{z}}e and {Smith}, Kendrick and {Zaldarriaga}, Matias and {Assassi}, Valentin and {Braden}, Jonathan and {Hajian}, Amir and {Kobayashi}, Takeshi and {Stein}, George and {van Engelen}, Alexander},
+        title = "{Testing Inflation with Large Scale Structure: Connecting Hopes with Reality}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+         year = 2014,
+        month = dec,
+          eid = {arXiv:1412.4671},
+        pages = {arXiv:1412.4671},
+archivePrefix = {arXiv},
+       eprint = {1412.4671},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014arXiv1412.4671A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
 @article{kitanidis2020imaging,
   title={Imaging systematics and clustering of DESI main targets},
   author={Kitanidis, Ellie and White, Martin and Feng, Yu and Schlegel, David and Guy, Julien and Dey, Arjun and Landriau, Martin and Brooks, David and Levi, Michael and Moustakas, John and others},
